---
source: src/diagnostic.rs
expression: clean
---
error[E0277]: `Rc<Mutex<i32>>` cannot be sent between threads safely
@ [src/main.rs]:
│ [line 12]: required by a bound introduced by this call
│ [lines 12..17]: `Rc<Mutex<i32>>` cannot be sent between threads safely
> note: required because it's used within `{closure@src/main.rs:11:36: 11:43}`
> help: within `{closure@src/main.rs:11:36: 11:43}`, the trait `Send` is not implemented for `Rc<Mutex<i32>>`


